refactor: address SonarQube issues across project